updates to bio, footer, and links section

--- a/index.html
+++ b/index.html
@@ -20,17 +20,16 @@
             <a href="#">Resume</a>
           </ul>
           <ul>
-            <a href="#">Github</a>
+            <a target="_blank" href="https://github.com/evlay">Github</a>
           </ul>
           <ul>
-            <a href="#">LinkedIn</a>
+            <a target="_blank" href="https://www.linkedin.com/in/evan-layton-7838bb172/">LinkedIn</a>
           </ul>
       </div>
       <section id="about-section">
         <h2>About Me</h2>
         <p>
-          I'm a software developer that enjoys bug free code and long walks on the
-          beach. 
+          I am a software developer with over 4 years of industry experience in the finance sector with a focus on web development using Javascript, PHP, HTML and CSS. Outside of work I thoroughly enjoy fishing, hockey and spending time with my family. 
         </p>
       </section>
       <section id="work-section">
@@ -38,15 +37,14 @@
         <hr>
         <div class="project-list">
           <div class="project-card">
-            <h4>Reddit Clone</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum voluptates impedit nobis eos at voluptate omnis quae blanditiis itaque distinctio. Aliquid ullam reprehenderit ipsam id debitis recusandae nihil laborum dicta.</p>
+            <h4>American First Finance</h4>
+            <p>A payment solution provider that is committed to helping millions of people get what they need exactly how, where, and when they need it the most.</p>
             <a href="#">Try It</a>
-            <a target="_blank" href="https://github.com/evlay/plaudit">Code</a>
+            <a target="_blank" href="https://americanfirstfinance.com/">Website</a>
           </div>
-          <div class="project-card">
+          <!-- <div class="project-card">
             <h4>Plaudit</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum voluptates impedit nobis eos at voluptate omnis quae blanditiis itaque distinctio. Aliquid ullam reprehenderit ipsam id debitis recusandae nihil laborum dicta.</p>
-            <a href="#">Try It</a>
             <a target="_blank" href="https://github.com/evlay/plaudit">Code</a>
           </div>
           <div class="project-card">
@@ -54,13 +52,13 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum voluptates impedit nobis eos at voluptate omnis quae blanditiis itaque distinctio. Aliquid ullam reprehenderit ipsam id debitis recusandae nihil laborum dicta.</p>
             <a href="#">Try It</a>
             <a target="_blank" href="https://github.com/evlay/plaudit">Code</a>
-          </div>
+          </div> -->
         </div>
       </section>
     </main>
     <footer>
       <p>
-        This site was made with HTML, CSS and love
+        Really Good Footer
       </p>
     </footer>
   </body>
